--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>For My Speciol Person ❤️</h1>
+            <h1>For You Malaika❤️</h1>
         </header>
 
         <div class="letter-container">
@@ -454,7 +454,7 @@
             }, 500);
 
             // Typewriter effect for letter
-           const letterContent = "Thank you for coming into my life 💫🤍\n\nI’m so grateful for you — for your support, your understanding, and the way you stand by me with so much care and feeling 💞. You’ve made my life brighter just by being a part of it 🌟.\n\nEvery moment we’ve shared — the laughs 😊, the talks 💬, the silence 🤍, and the happiness 🌸 — means so much to me. I enjoy every moment with you, and none of them will ever be forgotten 🥰✨.\n\nThank you for supporting me, believing in me, and making me feel valued and cared for 💐. Having you in my life is truly a blessing, and I cherish all the memories we create together 💖🌈.\n\nNo matter where life takes us, these moments and feelings will always stay close to my heart 💝💫.\n\nWith love and gratitude,\n Fatima Shah 💕✨";
+           const letterContent = "Happiest Birthday Wishes💫🤍\n\nI’m so grateful for you — for your support, your understanding, and the way you stand by me with so much care and feeling 💞. You’ve made my life brighter just by being a part of it 🌟.\n\nEvery moment we’ve shared — the laughs 😊, the talks 💬, the silence 🤍, and the happiness 🌸 — means so much to me. I enjoy every moment with you, and none of them will ever be forgotten 🥰✨.\n\nThank you for supporting me, believing in me, and making me feel valued and cared for 💐. Having you in my life is truly a blessing, and I cherish all the memories we create together 💖🌈.\n\nNo matter where life takes us, these moments and feelings will always stay close to my heart 💝💫.\n\nWith love and gratitude,\n Fatima Shah 💕✨";
 
             
             new Typed('#typed-text', {
